@startuml
title opponent robot state machine

' states
state Command 
state Park 
state Fight
state Stop 

' relationships
[*] -d-> Stop

Stop -l-> Park : gesture=point_left or point_right
Stop -r-> Fight : gesture=two_fists
Stop -d-> Command : gesture=open_hand

Command --> Park : gesture=point_left or point_right
Command --> Fight : gesture=two_fists
Command --> Stop : gesture=palm_down

Park --> Command : gesture=open_hand
Park --> Fight : gesture=two_fists
Park --> Stop : gesture=palm_down

Fight --> Park : gesture=point_left or point_right
Fight --> Command : gesture=open_hand
Fight --> Stop : gesture=palm_down

@enduml